# IAM_Projet

./: Projet Cyber.docx  README.md  app.js  docker-compose.yml  keycloak-config.js  keycloak.js  keycloak.json  package-lock.json  package.json
export/: myrealm.json
iam_test/: Cargo.toml  create_user.html  delete_user.html  index.html  list_users.html  logout.html  response.html  update_user.html  verify_jwt.py
iam_test/src/: auth.rs  auth_middleware.rs  main.rs  server.rs  user_management.rs
keycloak/: Dockerfile  keycloak.conf
postgres/: init.sql
sessions/: rlzJQpd4m3I5R8QpGGGCsn2gE5l1lwEl.json
src/: Cargo.toml  main.rs
