[package]
name = "iam_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenID Connect library
openidconnect = "2.0"

# Reqwest for HTTP requests, including blocking requests and JSON serialization
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Serde for serializing and deserializing data structures
serde = { version = "1.0", features = ["derive"] }

# Serde JSON for working with JSON data
serde_json = "1.0"

# Tokio for asynchronous programming
tokio = { version = "1", features = ["full"] }

[[bin]]
# Define a binary target for the server
name = "server"
path = "src/server.rs"